updated spacing issues

--- a/designbrief.css
+++ b/designbrief.css
@@ -1078,6 +1078,7 @@ html {
     background-color: black;
     min-height: 180px;
     margin-top: -25px;
+    position: relative;
 }
 .date {
     font-family: "futura-pt", sans-serif;
@@ -1108,8 +1109,8 @@ html {
     width: 200px;
     background: transparent;
     position: absolute;
-    top: 2460px;
-    right: 600px;
+    left: 620px;
+    top: 45px;
     color: white;
 }
 .submit {
@@ -1120,8 +1121,8 @@ html {
     text-transform: uppercase;
     letter-spacing: 3px;
     position: absolute;
-    top: 2460px;
-    right:490px;
+    top: 47px;
+    left: 850px;
     
 }
 .spotify {
@@ -1133,6 +1134,7 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     margin-top: -30px;
+    position: relative;
 }
 .listento {
     font-family: "futura-pt", sans-serif;
@@ -1184,9 +1186,7 @@ html {
     font-size: 11.5px;
     width: 164px;
     height: 14px;
-    position: absolute;
-    left: 110px;
-    top: 2780px;
+    margin-left: 100px;
 }
 .youtubebutton {
     text-decoration: none;
@@ -1206,12 +1206,11 @@ html {
     width: 164px;
     height: 14px;
     position: absolute;
-    left: 110px;
-    top: 2830px;
+    left: 98px;
+    top: 265px;
 }
 .poster {
-    height: 35%;
-    position: absolute;
-    top: 2660px;
-    left: 600px;
+    height: 250px;
+    float: right;
+    padding-right: 400px;
 }
